--- a/app/src/main/res/layout/fragment_user_details.xml
+++ b/app/src/main/res/layout/fragment_user_details.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
         <variable name="user" type="com.example.ex10_listfromdb.User"/>
     </data>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:background="@{user.age >= 18 ? @color/design_default_color_error : @color/white}"
-        android:orientation="horizontal"
+        android:orientation="vertical"
+        android:gravity="center"
         android:padding="5dp">
 
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:text="@{user.name}"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="150dp"/>
+
         <TextView
             android:id="@+id/age"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
             android:textColor="@color/black"
