--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--On envelope notre LinearLayout de structure de vues par un <layout car on passe aussi des <data-->
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+<!--    permet d'indiquer le nom et le type des variables que l'on souhaite afficher directement dasn nos vue grace au dataBinding-->
     <data>
         <variable name="user" type="com.example.ex10_listfromdb.User"/>
     </data>
+<!--    on peut ecrire des conditions et donc donner selon la valeur de age telle ou telle couleur de background-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
