--- a/app/src/main/res/layout/fragment_age.xml
+++ b/app/src/main/res/layout/fragment_age.xml
@@ -7,7 +7,7 @@
     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AgeFragment">
+        tools:context=".fragment.AgeFragment">
 
         <TextView
             android:layout_width="wrap_content"
